// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  className="EmptyDays-styles__root planner-empty-days"
>
  <Heading
    border="bottom"
    color="inherit"
    level="h2"
  >
    <Text
      as="div"
      letterSpacing="normal"
      lineHeight="condensed"
      size="medium"
      wrap="normal"
    >
      April 23 to April 26
    </Text>
  </Heading>
  <div
    className="EmptyDays-styles__nothingPlannedContent"
  >
    <GroupedDates
      aria-hidden="true"
      role="img"
      viewBox="0 0 907 155"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    />
    <div
      className="EmptyDays-styles__nothingPlannedContainer"
    >
      <div
        className="EmptyDays-styles__nothingPlanned"
      >
        <Text
          as="span"
          letterSpacing="normal"
          size="large"
          wrap="normal"
        >
          Nothing Planned Yet
        </Text>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the today className when surrounds Today 1`] = `
<div
  className="EmptyDays-styles__root planner-empty-days planner-today"
>
  <Heading
    border="bottom"
    color="inherit"
    level="h2"
  >
    <Text
      as="div"
      letterSpacing="normal"
      lineHeight="condensed"
      size="medium"
      wrap="normal"
    >
      April 22 to April 26
    </Text>
  </Heading>
  <div
    className="EmptyDays-styles__nothingPlannedContent"
  >
    <GroupedDates
      aria-hidden="true"
      role="img"
      viewBox="0 0 907 155"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    />
    <div
      className="EmptyDays-styles__nothingPlannedContainer"
    >
      <div
        className="EmptyDays-styles__nothingPlanned"
      >
        <Text
          as="span"
          letterSpacing="normal"
          size="large"
          wrap="normal"
        >
          Nothing Planned Yet
        </Text>
      </div>
    </div>
  </div>
</div>
`;
